--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
         "xyz.plsql-language",
         "streetsidesoftware.code-spell-checker",
         "EditorConfig.EditorConfig",
-        "DavidAnson.vscode-markdownlint"
+        "DavidAnson.vscode-markdownlint",
+        "inferrinizzard.prettier-sql-vscode"
       ]
     }
   }
