--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
   ],
   "editor.formatOnSave": true,
   "gitdoc.commitOnClose": true,
-  "files.insertFinalNewline": true
+  "files.insertFinalNewline": true,
+  "Prettier-SQL.SQLFlavourOverride": "plsql"
 }
