--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,5 @@
   ],
   "editor.formatOnSave": true,
   "gitdoc.commitOnClose": true,
-  "files.insertFinalNewline": true,
-  "Prettier-SQL.SQLFlavourOverride": "plsql"
+  "files.insertFinalNewline": true
 }
