--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,25 +1,23 @@
 {
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        "GitHub.copilot",
-        "vsls-contrib.gitdoc",
-        "CrappyCodeMaker.ccm-plsql-oracle",
-        "EwanDubashinski.plsqllint",
-        "Oracle.oracledevtools",
-        "Oracle.sql-developer",
-        "adpyke.vscode-sql-formatter",
-        "apng.orclapex-autocomplete",
-        "casian.plsql",
-        "mycelo.oracle-plsql",
-        "xyz.plsql-language",
-        "streetsidesoftware.code-spell-checker",
-        "EditorConfig.EditorConfig",
-        "DavidAnson.vscode-markdownlint",
-        "Advanced_Challenge_Workspace.sql",
-        "inferrinizzard.prettier-sql-vscode",
-        "markdownlint.markdownlint"
-      ]
+    "customizations": {
+      "vscode": {
+        "extensions": [
+          "GitHub.copilot",
+          "CrappyCodeMaker.ccm-plsql-oracle",
+          "DavidAnson.vscode-markdownlint",
+          "EwanDubashinski.plsqllint",
+          "Oracle.oracledevtools",
+          "Oracle.sql-developer",
+          "adpyke.vscode-sql-formatter",
+          "apng.orclapex-autocomplete",
+          "casian.plsql",
+          "inferrinizzard.prettier-sql-vscode",
+          "markdownlint.markdownlint",
+          "mycelo.oracle-plsql",
+          "streetsidesoftware.code-spell-checker",
+          "vsls-contrib.gitdoc",
+          "xyz.plsql-language"
+        ]
+      }
     }
   }
-}
