--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,21 +1,21 @@
 {
+    "editor.detectIndentation": false,
     "editor.formatOnSave": true,
-    "editor.tabSize": 4,
     "editor.indentSize": 4,
     "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
-    "files.insertFinalNewline": true,
-    "gitdoc.enabled": true,
-    "git.autofetch": true,
-    "gitdoc.autoCommitDelay": 60000,
-    "gitdoc.commitMessageFormat": "ccc, LLL d, y, h:mm a '+00:00'",
     "editor.rulers": [
         80,
         120
     ],
+    "editor.tabSize": 4,
+    "files.insertFinalNewline": true,
+    "git.autofetch": true,
+    "gitdoc.autoCommitDelay": 60000,
+    "gitdoc.commitMessageFormat": "ccc, LLL d, y, h:mm a '+00:00'",
     "gitdoc.commitOnClose": true,
+    "gitdoc.enabled": true,
     "oracledevtools.formatterSettings": {
-        "keywordCasing": "Uppercase",
-        "identifierCasing": "No change"
+        "identifierCasing": "No change",
+        "keywordCasing": "Uppercase"
     }
 }
